# magnifier

./: Makefile  Makefile.am  README  configure.ac  install-sh  mag-pi.c  mage.c  magnifier.c  meson.build  mouseloupe.c  mouseloupegui
debian/: changelog  control  copyright  mage-rpi.install
